--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,9 @@ jobs:
 
       - name: Update Packages
         run: |
-          apt install -y cmake g++ gcc-arm-none-eabi libnewlib-arm-none-eabi
-          apt install -y git python3
+          sudo apt update -y
+          sudo apt install -y cmake g++ gcc-arm-none-eabi libnewlib-arm-none-eabi
+          sudo apt install -y git python3
 
       - name: Compile Firmware
         run: mkdir build; cd build; cmake .. && make
