--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,22 +5,31 @@ add_executable(stepbox)
 target_sources(stepbox PUBLIC
         ${CMAKE_CURRENT_LIST_DIR}/board.cpp
         ${CMAKE_CURRENT_LIST_DIR}/device.cpp
+        # ${CMAKE_CURRENT_LIST_DIR}/encoder.cpp
+        # ${CMAKE_CURRENT_LIST_DIR}/pio_rotary_encoder.cpp
         ${CMAKE_CURRENT_LIST_DIR}/gamepad.cpp
         ${CMAKE_CURRENT_LIST_DIR}/keyboard.cpp
         ${CMAKE_CURRENT_LIST_DIR}/main.cpp
         ${CMAKE_CURRENT_LIST_DIR}/usb_descriptors.cpp
         )
+        
+# pico_generate_pio_header(stepbox
+#         ${CMAKE_CURRENT_LIST_DIR}/../include/pio_rotary_encoder.pio)
 
-# Make sure TinyUSB can find tusb_config.h
+        # Make sure TinyUSB can find tusb_config.h
 target_include_directories(stepbox PUBLIC
         ${CMAKE_CURRENT_LIST_DIR}/../include
         )
+
 
 target_link_libraries(stepbox PUBLIC
         pico_stdlib
         tinyusb_device
         tinyusb_board
+        hardware_pio
+        hardware_dma
+        hardware_irq
+        encoder
         )
-
 
 pico_add_extra_outputs(stepbox)
