--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,8 @@ include(pico_sdk_import.cmake)
 project(stepbox)
 
 pico_sdk_init()
+
 add_subdirectory(drivers/encoder)
+add_subdirectory(drivers/ws2812b)
+
 add_subdirectory(src)
